<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    android:orientation="vertical"
    tools:context=".SymbolDetailsActivity">

    <TextView
        android:id="@+id/lblName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="25dp"
        android:background="#534a87"
        android:paddingVertical="5dp"
        android:text="@string/lbl_name"
        android:textAlignment="center"
        android:textColor="#fff2cc"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginVertical="10dp"
        android:background="#FFF2CC"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginHorizontal="20dp"/>

    <TextView
        android:id="@+id/lblDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="25dp"
        android:background="#534a87"
        android:paddingVertical="5dp"
        android:text="@string/lbl_description"
        android:textAlignment="center"
        android:textColor="#fff2cc"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/txtDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginVertical="10dp"
        android:background="#FFF2CC"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginHorizontal="20dp"/>


    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_margin="20dp"
        android:text="@string/btn_save"
        android:textColor="#FFF2CC"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/btn_delete"
        android:textColor="#FFF2CC"
        android:textSize="16sp"
        android:visibility="gone" />


</LinearLayout>