<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DreamDetailsActivity"
    android:orientation="vertical"
    android:background="@drawable/gradient_bg">

    <TextView
        android:id="@+id/lblCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="25dp"
        android:background="#534a87"
        android:paddingVertical="5dp"
        android:text="@string/lbl_category"
        android:textAlignment="center"
        android:textColor="#fff2cc"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:background="#FFF2CC"
        android:entries="@array/spinner_data" />

    <TextView
        android:id="@+id/lblDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="#534a87"
        android:paddingVertical="5dp"
        android:text="@string/lbl_description"
        android:textAlignment="center"
        android:textColor="#fff2cc"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/txtDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginVertical="10dp"
        android:background="#FFF2CC"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginHorizontal="20dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="#534a87"
        android:paddingVertical="5dp"
        android:text="@string/lbl_date"
        android:textAlignment="center"
        android:textColor="#fff2cc"
        android:textSize="20sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:background="#FFF2CC">

        <EditText
            android:id="@+id/txtDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:layout_weight="3"
            android:editable="false"
            android:ems="10"
            android:inputType="none" />

        <Button
            android:id="@+id/btnShowDatePicker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:insetRight="10dp"
            app:icon="@android:drawable/ic_menu_my_calendar"
            app:iconTint="#FFF2CC" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_margin="20dp"
        android:text="@string/btn_save"
        android:textColor="#FFF2CC"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/btn_delete"
        android:textColor="#FFF2CC"
        android:textSize="16sp"
        android:visibility="gone" />

</LinearLayout>